2012-09-06  Michael Saboff  <msaboff@apple.com>

        16 bit JSRopeString up converts an 8 bit fibers to 16 bits during resolution
        https://bugs.webkit.org/show_bug.cgi?id=95810

        Reviewed by Benjamin Poulain.

        New copy routine that takes an 8 bit source and a 16 bit destination.  Used when copying
        the contents of an 8 bit fiber to the 16 bit buffer when resolving a 16 bit rope.

        * wtf/text/StringImpl.h:
        (WTF::StringImpl::copyChars):
        (StringImpl):

2012-09-06  Michael Saboff  <msaboff@apple.com>

        Unreviewed fix to r127799.
        https://bugs.webkit.org/show_bug.cgi?id=95807

        Unreviewed fix.

        Removed extraneous "static".  This code is hidden behind STRING_STATS define and 
        therefore is not enabled by default.

        * wtf/text/StringImpl.cpp:

2012-09-06  Lauro Neto  <lauro.neto@openbossa.org>

        [Qt] Deprecate String += operator
        https://bugs.webkit.org/show_bug.cgi?id=95895

        Reviewed by Benjamin Poulain.

        Remove Qt from WTF_DEPRECATED_STRING_OPERATORS guard.

        * wtf/Platform.h:

2012-09-06  Michael Saboff  <msaboff@apple.com>

        ENH: Add Logging to StringImpl to track String Types
        https://bugs.webkit.org/show_bug.cgi?id=95807

        Reviewed by Benjamin Poulain.

        Added StringsStats class that keeps track of the number of strings, number of 8 and 16 bit
        strings as well as the number of 8 bit strings up converted to 16 bits. The number of characrters
        for each type is also accumulated. These statistics are output via DataLog every 5000
        calls to StringImpl destructor. The 5000 can be adjusted via s_printStringStatsFrequency.
        This StringStats code is disabled by default and enabled by defining STRING_STATS in
        wtf/text/StringImpl.h.

        * wtf/text/StringImpl.cpp:
        (WTF::StringStats::removeString):
        (WTF::StringStats::printStats):