@@ -1,5 +1,17 @@
 2012-09-06  Michael Saboff  <msaboff@apple.com>
 
+        StringBuilder::toAtomicString() can create an 16 bit string with 8 bit contents
+        https://bugs.webkit.org/show_bug.cgi?id=96029
+
+        Reviewed by Benjamin Poulain.
+
+        Added 8 bit path when creating an AtomicString from a partial 8 bit buffer.
+
+        * wtf/text/StringBuilder.h:
+        (WTF::StringBuilder::toAtomicString):
+
+2012-09-06  Michael Saboff  <msaboff@apple.com>
+
         16 bit JSRopeString up converts an 8 bit fibers to 16 bits during resolution
         https://bugs.webkit.org/show_bug.cgi?id=95810
 
